--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-    "name": "clever-upload-backend",
-    "version": "0.0.2",
-    "dependencies": {
-        "q": "1.0.0",
-        "sequelize": "1.7.0-rc9"
-    },
-    "scripts": {
-        "test": "grunt test:unit"
-    },
-    "author": {
-        "name": "Clevertech",
-        "email": "info@clevertech.biz",
-        "web": "http://www.clevertech.biz"
-    },
-    "main": "module.js",
-    "description": "CleverStack file uploading and management",
-    "keywords": [
-        "cleverstack",
-        "clevertech",
-        "cleverstack-module",
-        "cleverstack-backend",
-        "backend"
-    ],
-    "license": "BSD-2-Clause",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/CleverStack/clever-upload-backend.git"
-    },
-    "bugs": {
-        "url": "https://github.com/CleverStack/clever-upload-backend/issues"
-    },
-    "devDependencies": {
-        "chai": "1.9.0",
-        "mocha": "1.17.1"
-    },
-    "bundledDependencies": [
-      "clever-orm",
-      "clever-auth"
-    ]
+  "name": "clever-upload-backend",
+  "version": "0.0.2",
+  "dependencies": {
+    "q": "1.0.0",
+    "sequelize": "^1.7.0"
+  },
+  "scripts": {
+    "test": "grunt test:unit"
+  },
+  "author": {
+    "name": "Clevertech",
+    "email": "info@clevertech.biz",
+    "web": "http://www.clevertech.biz"
+  },
+  "main": "module.js",
+  "description": "CleverStack file uploading and management",
+  "keywords": [
+    "cleverstack",
+    "clevertech",
+    "cleverstack-module",
+    "cleverstack-backend",
+    "backend"
+  ],
+  "license": "BSD-2-Clause",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/CleverStack/clever-upload-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CleverStack/clever-upload-backend/issues"
+  },
+  "devDependencies": {
+    "chai": "1.9.0",
+    "mocha": "1.17.1"
+  },
+  "bundledDependencies": [
+    "clever-orm",
+    "clever-auth"
+  ]
 }
